--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
     "reactstrap": "^8.9.0",
     "sass": "^1.32.8",
     "web-vitals": "^1.1.1"
