--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
@@ -15,6 +19,7 @@
     "react-uuid": "^1.0.2",
     "reactstrap": "^8.9.0",
     "sass": "^1.32.8",
+    "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
